discussion/kv_engine/184459/184459_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54958: Move the protocol bits of Observe to the core

Separate out the bits for the protocol encoding from ep-engine
and perform that in the core.

Given that the core supports a state machinery for the command
we don't need to redo all keys every time we have to block for
a key; and may continue to the next key.

@todo move the constants from protocol_binary.h to somewhere
else and add remap in the core.

Change-Id: I2339309b5e4f741f0bef54eb3b72487b5204f779

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-04 14:56:04.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-04 15:30:21.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22320/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/observe_context.cc:108:30: error: use of undeclared identifier "vb" [clang-diagnostic-error]
        output.write((char*)&vb, sizeof(vb));
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/observe_context.cc:108:41: error: use of undeclared identifier "vb" [clang-diagnostic-error]
        output.write((char*)&vb, sizeof(vb));
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/observe_context.h:33:10: error: no template named "deque" in namespace "std" [clang-diagnostic-error]
    std::deque<std::pair<Vbid, DocKey>> keys;
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22320/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/observe_context.cc:108:30:
error: use of undeclared identifier "vb" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22320/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43357/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/observe_context.h:33:10:
error: no template named "deque" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43357/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24786/ : FAILURE

Compile error at [2023-01-04T15:05:23.924Z] ../kv_engine/daemon/protocol/mcbp/observe_context.h:33:10:
error: ?deque? in namespace ?std? does not name a template type
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24786/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25646/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25646/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21943/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51647/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1082/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12041/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24364/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23890/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32783/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12128/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
